changed some payments detail and add auth for admin
