# src/_dtos/orders/dto/update-orders.dto.ts
@@ -10,8 +10,9 @@ export class UpdateOrdersDto {
   @ApiProperty({
     type: 'string',
     required: false,
+    nullable: true,
   })
-  payment_id?: string;
+  payment_id?: string | null;
   @ApiProperty({
     type: 'string',
     required: false,
