# src/_dtos/orders/entities/orders.entity.ts
@@ -18,8 +18,9 @@ export class OrdersEntity {
   users?: UsersEntity;
   @ApiProperty({
     type: 'string',
+    nullable: true,
   })
-  payment_id: string;
+  payment_id: string | null;
   @ApiProperty({
     type: 'integer',
     format: 'int32',
