# src/auth/auth.controller.ts
@@ -1,6 +1,8 @@
 import { Controller, Get, Req, Res, UseGuards } from '@nestjs/common';
 import { GoogleOAuthGuard } from './google/google-oauth.guard';
 import { AuthService } from './auth.service';
+import { ApiResponse } from '@nestjs/swagger';
+import { AuthResponseDto } from './dtos';
 
 @Controller('auth')
 export class AuthController {
@@ -14,19 +16,28 @@ export class AuthController {
 
   @Get('google/callback')
   @UseGuards(GoogleOAuthGuard)
+  @ApiResponse({
+    status: 302,
+    description: 'Redirects to the specified URL with parameters',
+    type: AuthResponseDto,
+  })
   async googleCallback(@Req() req, @Res() res) {
     // Successful authentication
     // const user = req.user;
 
-    const jwt = await this.authService.googleLogin(req);
+    try {
+      const jwt = await this.authService.googleLogin(req);
 
-    if (!jwt)
+      if (!jwt) throw new Error('Login failed');
+
+      return res.redirect(
+        `${process.env.CLIENT_APP_DOMAIN}/api/auth?access_token=${jwt.access_token}&roles=${jwt.role.join(',')}`,
+      );
+    } catch (error) {
+      console.error(error);
       return res.redirect(
         `${process.env.CLIENT_APP_DOMAIN}?error=login_failed`,
-      ); // Redirect with an error message
-
-    return res.redirect(
-      `${process.env.CLIENT_APP_DOMAIN}/api/auth?token=${jwt.access_token}`,
-    ); // Redirect with the user's email
+      );
+    }
   }
 }
